--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </section>
         <section data-background-iframe="https://giphy.com/embed/26FPy3QZQqGtDcrja">
 					<h2>JavaScript Ecosystem Appears like a Dumpster Fire</h2>
-          <p>It still is in a little ways</p>
+          <p>It still is in some ways</p>
 				</section>
         <section>
           <section>
