--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
           <p>Speaker Jean-Marcel Belmont</p>
           <p>Software Engineer at Genisys</p>
         </section>
+        <section data-background-iframe="https://giphy.com/embed/26FPy3QZQqGtDcrja">
+					<h2>JavaScript Ecosystem Appears like a Dumpster Fire</h2>
+          <p>It still is in a little ways</p>
+				</section>
         <section>
           <section>
             <h4>Topic</h4>
