--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <p>Speaker Jean-Marcel Belmont</p>
           <p>Software Engineer at Genisys</p>
           <p>Organizer of Code Craftsmanship Saturdays and Papers We Love Raleigh</p>
-          <p>Army Veteran and husband of 2 children</p>
+          <p>Army Veteran, husband, and father of 2 children</p>
         </section>
         <section data-background-iframe="https://giphy.com/embed/26FPy3QZQqGtDcrja">
 					<h2>JavaScript Ecosystem is somewhat of a Dumpster Fire</h2>
